@@ -2,5 +2,6 @@
 
 # i18n
 i18n_vars="/etc/sysconfig/keyboard:KEYTABLE-KEYMAP /etc/sysconfig/i18n:SYSFONT-FONT,FONTACM-FONT_MAP,FONT_UNIMAP"
-add_dracutmodules+=" rpmversion "
+add_dracutmodules+=" rpmversion shutdown "
 stdloglvl=3
+prefix=/run/initramfs
